test/functional/should-fail/vsgc1875b.f3
import java.lang.System;

/*
 * VSGC-1875 public-init variable is boundable from outside the script
 *
 * @compilefirst ./vsgc1875a.f3
 * @test/compile-error
 *
 */


var str:String[]=["JAN","AUG","MAR","APR"];
var bz1=vsgc1875a{
    months:bind str; // binding a public-init variable
}

System.out.println(bz1.months);
str=["Mon","Tue","Wed","Fri"]; // variable str is being re-assgined
System.out.println(bz1.months); 

var bz2=vsgc1875a{
months:["febbraio","marzo","aprile"]; }
System.out.println(bz2.months);

